project(advent-of-code-2020)
cmake_minimum_required(VERSION 3.19)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(puzzle-01-01)
add_subdirectory(puzzle-01-02)
add_subdirectory(puzzle-02-01)
add_subdirectory(puzzle-02-02)
add_subdirectory(puzzle-03-01)
add_subdirectory(puzzle-03-02)
add_subdirectory(puzzle-04-01)
add_subdirectory(puzzle-04-02)
add_subdirectory(puzzle-05-01)
add_subdirectory(puzzle-05-02)
add_subdirectory(puzzle-06-01)
add_subdirectory(puzzle-06-02)
add_subdirectory(puzzle-07-01)
add_subdirectory(puzzle-07-02)
add_subdirectory(puzzle-08-01)
add_subdirectory(puzzle-08-02)
