project(advent-of-code-2020)
cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(puzzle-01-01)
add_subdirectory(puzzle-01-02)
add_subdirectory(puzzle-02-01)
add_subdirectory(puzzle-02-02)
add_subdirectory(puzzle-03-01)
add_subdirectory(puzzle-03-02)
add_subdirectory(puzzle-04-01)
add_subdirectory(puzzle-04-02)
add_subdirectory(puzzle-05-01)
add_subdirectory(puzzle-05-02)
add_subdirectory(puzzle-06-01)
add_subdirectory(puzzle-06-02)
add_subdirectory(puzzle-07-01)
add_subdirectory(puzzle-07-02)
add_subdirectory(puzzle-08-01)
add_subdirectory(puzzle-08-02)
add_subdirectory(puzzle-09-01)
add_subdirectory(puzzle-09-02)
add_subdirectory(puzzle-10-01)
add_subdirectory(puzzle-10-02)
add_subdirectory(puzzle-11-01)
add_subdirectory(puzzle-11-02)
add_subdirectory(puzzle-12-01)
add_subdirectory(puzzle-12-02)
add_subdirectory(puzzle-13-01)
add_subdirectory(puzzle-13-02)
add_subdirectory(puzzle-14-01)
add_subdirectory(puzzle-14-02)
add_subdirectory(puzzle-15-01)
add_subdirectory(puzzle-15-02)
add_subdirectory(puzzle-16-01)
add_subdirectory(puzzle-16-02)
add_subdirectory(puzzle-17-01)
add_subdirectory(puzzle-17-02)
add_subdirectory(puzzle-18-01)
add_subdirectory(puzzle-18-02)
